# Nox

./: .gitignore  BluetoothLauncher.ahk  BluetoothLauncherDebug.ahk  LICENSE  README.md  make_icons.ps1  regen_icons.ps1  test.ps1  test_battery.ps1  test_rfcomm.ps1  test_winrt.ps1
EarbudsTracker/: README.md  audio_monitor.py  bluetooth_monitor.py  database.py  install_startup.bat  main.py  requirements.txt  run.bat  tracker.py  tray.py  ui.py
ear-pc/: dis.txt  strings.txt
ear-web/res/js/: corsola.js
earbuds-tracker-tauri/: .gitignore  README.md  debug_log.txt  gitignore  package-lock.json  package.json
earbuds-tracker-tauri/scratch/: test_pnp_battery.ps1
earbuds-tracker-tauri/src/: battery.test.js  index.html  main.js  streak.test.js  styles.css  utils.js  xss_fix.test.js
earbuds-tracker-tauri/src-tauri/: .gitignore  Cargo.toml  cargo_check2.txt  cargo_output.txt  generate_icons.py  tauri.conf.json
earbuds-tracker-tauri/src-tauri/.cargo/: config.toml
earbuds-tracker-tauri/src-tauri/capabilities/: default.json
earbuds-tracker-tauri/src-tauri/icons/: icon.icns
earbuds-tracker-tauri/src-tauri/src/: app_audio.rs  audio.rs  bluetooth.rs  db.rs  lib.rs  main.rs  spp.rs  tracker.rs
test_winrt_spp/: Cargo.toml
test_winrt_spp/src/: main.rs
