[package]
name = "earbuds-tracker"
version = "2.0.0"
edition = "2021"
description = "Nox – Rust/Tauri edition"

[lib]
name = "earbuds_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = { version = "2" }
tauri-plugin-autostart = { version = "2" }
tauri-plugin-single-instance = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
rusqlite       = { version = "0.31", features = ["bundled"] }
chrono         = { version = "0.4", features = ["serde"] }
log            = "0.4"
env_logger     = "0.11"
tokio          = { version = "1", features = ["full"] }
once_cell      = "1"
parking_lot    = "0.12"
serialport     = "4"

# Windows-specific crates for WASAPI + WMI
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_System_Wmi",
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_Devices_Properties",
    "Win32_Devices_FunctionDiscovery",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_Shell",
    "Data_Xml_Dom",
    "UI_Notifications",
    "Devices_Bluetooth",
    "Devices_Bluetooth_Rfcomm",
    "Foundation_Collections",
    "Networking_Sockets",
    "Storage_Streams",
] }
wmi = "0.14"

[profile.release]
opt-level     = 3
lto           = true
codegen-units = 1
strip         = true
